@@ -25,14 +25,17 @@ Acf,Pacf,ma,CV,BoxCox.lambda,dshw, bats, tbats, msts, getResponse, tsoutliers,
 tsclean, bizdays, easter,
 stlm, forecast.stlm)
 
+S3method(as.character, Arima)
 S3method(as.data.frame,forecast)
 S3method(coef,ets)
 S3method(fitted,Arima)
 S3method(fitted,fracdiff)
-S3method(forecast,default)
 S3method(forecast,ar)
 S3method(forecast,Arima)
+S3method(forecast,bats)
+S3method(forecast,default)
 S3method(forecast,ets)
+S3method(forecast,forecast)
 S3method(forecast,fracdiff)
 S3method(forecast,HoltWinters)
 S3method(forecast,lm)
@@ -40,46 +43,44 @@ S3method(forecast,nnetar)
 S3method(forecast,stl)
 S3method(forecast,stlm)
 S3method(forecast,StructTS)
-S3method(forecast,ts)
-S3method(forecast,bats)
 S3method(forecast,tbats)
-S3method(getResponse,default)
+S3method(forecast,ts)
+S3method(forecast,varest)
 S3method(getResponse,ar)
 S3method(getResponse,Arima)
+S3method(getResponse,default)
 S3method(getResponse,fracdiff)
 S3method(getResponse,lm)
 S3method(logLik,ets)
+S3method(plot,ar)
+S3method(plot,Arima)
 S3method(plot,bats)
-S3method(plot,tbats)
 S3method(plot,ets)
 S3method(plot,forecast)
+S3method(plot,mforecast)
 S3method(plot,splineforecast)
-S3method(plot,Arima)
-S3method(plot,ar)
+S3method(plot,tbats)
 S3method(predict,default)
 S3method(print,ARIMA)
+S3method(print,bats)
 S3method(print,ets)
 S3method(print,forecast)
+S3method(print,mforecast)
 S3method(print,msts)
-S3method(print,bats)
-S3method(print,tbats)
 S3method(print,nnetar)
 S3method(print,nnetarmodels)
-S3method(window,msts)
-S3method(residuals,fracdiff)
+S3method(print,tbats)
 S3method(residuals,bats)
+S3method(residuals,fracdiff)
 S3method(simulate,ar)
 S3method(simulate,Arima)
 S3method(simulate,ets)
 S3method(simulate,fracdiff)
+S3method(subset,ts)
 S3method(summary,Arima)
 S3method(summary,ets)
 S3method(summary,forecast)
 S3method(tsdiag,ets)
-S3method(subset,ts)
-S3method(plot,mforecast)
-S3method(print,mforecast)
-S3method(forecast,varest)
-S3method(forecast,forecast)
+S3method(window,msts)
 
 useDynLib(forecast)
