@@ -8,6 +8,7 @@ Version 5.10 (?? 2015)
   * Added plot.Arima() and plot.ar() functions.
   * Captured problem in bats/tbats where data are constant.
   * Fixed bug in forecasts from bats which labelled them as TBATS.
+  * Added as.character.Arima()
 
 Version 5.9 (26 February 2015)
   * Improved documentation of accuracy() function.
